[gd_scene load_steps=10 format=2]

[ext_resource path="res://scenes/game/Bird.tscn" type="PackedScene" id=1]
[ext_resource path="res://resources/fonts/PressStart2PRegular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://resources/images/background/seabg1.png" type="Texture" id=3]
[ext_resource path="res://scripts/ui/GameOver.gd" type="Script" id=4]
[ext_resource path="res://resources/themes/MenuButtonTheme.tres" type="Theme" id=5]

[sub_resource type="DynamicFont" id=15]
size = 30
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=17]
size = 30
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=16]
size = 120
outline_color = Color( 0.0196078, 0, 0.270588, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=18]
size = 50
font_data = ExtResource( 2 )

[node name="GameOver" type="Node2D"]
pause_mode = 2
script = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -793, 189 )
scale = Vector2( 10, 10 )
texture = ExtResource( 3 )
centered = false
offset = Vector2( 79.2, -18.9 )

[node name="ButtonRestart" type="Button" parent="."]
margin_left = 467.0
margin_top = 394.0
margin_right = 1090.0
margin_bottom = 498.0
theme = ExtResource( 5 )
custom_fonts/font = SubResource( 15 )
text = "Tentar novamente"

[node name="ButtonMenu" type="Button" parent="."]
margin_left = 464.0
margin_top = 511.0
margin_right = 1090.0
margin_bottom = 615.0
theme = ExtResource( 5 )
custom_fonts/font = SubResource( 15 )
text = "Menu principal"

[node name="KinematicBody2D" parent="." instance=ExtResource( 1 )]
position = Vector2( 1110, 278 )
script = null

[node name="KinematicBody2D2" parent="." instance=ExtResource( 1 )]
position = Vector2( 1429, 298 )
script = null

[node name="KinematicBody2D3" parent="." instance=ExtResource( 1 )]
position = Vector2( 1372, 206 )
script = null

[node name="KinematicBody2D4" parent="." instance=ExtResource( 1 )]
position = Vector2( 1210, 240 )
script = null

[node name="KinematicBody2D6" parent="." instance=ExtResource( 1 )]
position = Vector2( 1306, 287 )
script = null

[node name="LabelScore" type="Label" parent="."]
margin_left = 1.0
margin_top = 214.0
margin_right = 1600.0
margin_bottom = 376.0
rect_pivot_offset = Vector2( 158, 60 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 17 )
text = "
Pontuação


"
align = 1

[node name="LabelGameOver" type="Label" parent="."]
margin_top = 69.0
margin_right = 1598.0
margin_bottom = 213.0
rect_pivot_offset = Vector2( 663, 82 )
custom_colors/font_color = Color( 0.207843, 0.235294, 0.658824, 1 )
custom_fonts/font = SubResource( 16 )
text = "Fim de jogo"
align = 1

[node name="LabelScoreNum" type="Label" parent="."]
margin_top = 305.0
margin_right = 1600.0
margin_bottom = 514.0
custom_colors/font_color = Color( 0.207843, 0.235294, 0.658824, 1 )
custom_fonts/font = SubResource( 18 )
text = "0


"
align = 1

[node name="LabelHighScore" type="Label" parent="."]
margin_left = 1086.0
margin_top = 451.0
margin_right = 1599.0
margin_bottom = 613.0
rect_pivot_offset = Vector2( 158, 60 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 17 )
text = "Maior 
Pontuação


"
align = 1

[node name="LabelHighScoreNum" type="Label" parent="."]
margin_left = 1090.0
margin_top = 540.0
margin_right = 1599.0
margin_bottom = 749.0
custom_colors/font_color = Color( 0.207843, 0.235294, 0.658824, 1 )
custom_fonts/font = SubResource( 18 )
text = "0


"
align = 1

[connection signal="pressed" from="ButtonRestart" to="." method="_on_ButtonRestart_pressed"]
[connection signal="pressed" from="ButtonMenu" to="." method="_on_ButtonMenu_pressed"]
